# cms-id

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: catalog-cms.yml  ci.yml  docs.yml  exhaustive-cms.yml  live-cms.yml
docs/: development.md  index.md  testing.md
docs/guide/: getting-started.md  local-sources.md  releases-and-caching.md
docs/reference/: exceptions.md  knowledge-base.md  models.md  sources.md  stores.md
src/cms_icd/: __init__.py  exceptions.py  knowledge_base.py  models.py  parsers.py  sources.py  stores.py
tests/: test_lazy_api.py  test_parsers.py  test_sources.py
tests/live/: conftest.py  test_catalog.py  test_cms.py  test_current.py  test_exhaustive.py  test_historical.py
