[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cms-icd"
version = "0.1.0"
description = "Version-aware structured access to official CMS ICD-10 materials"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Pawel Renc" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "beautifulsoup4",
    "pymupdf",
    "requests",
]

[project.optional-dependencies]
dev = ["pre-commit", "pytest"]
docs = [
    "mkdocs-material",
    "mkdocstrings[python]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--doctest-modules --doctest-glob=README.md --doctest-glob=docs/*.md -m 'not live_cms'"
doctest_optionflags = ["NORMALIZE_WHITESPACE", "ELLIPSIS"]
markers = [
    "live_cms: integration tests that access official CMS endpoints",
    "live_catalog: fetch and validate CMS catalog pages without artifacts",
    "live_current: freshly download and parse the latest complete CMS snapshot",
    "live_historical: parse representative historical CMS artifact formats",
    "live_exhaustive: manually download and parse every advertised snapshot",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "C4",
    "DTZ",
    "RUF",
    "N",
    "TC",
]

[tool.ruff.lint.isort]
known-first-party = ["cms_icd"]
